--- a/Project/src/main/resources/pathfinding/path_find_main.fxml
+++ b/Project/src/main/resources/pathfinding/path_find_main.fxml
@@ -28,13 +28,13 @@
 <StackPane fx:id="parentPane" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pathfinding.UIControllerPFM">
      <children>
          <ImageView fx:id="backgroundImage" pickOnBounds="true">
-             <Image url="@Hospitalbackground.png" />
+             <Image url="@../images/Hospitalbackground.png" />
          <effect>
             <ColorAdjust brightness="0.41" />
          </effect>
          </ImageView>
          <VBox fillWidth="true">
-             <MenuBar blendMode="ADD" style="-fx-background-color: white;" stylesheets="@background.css">
+             <MenuBar blendMode="ADD" style="-fx-background-color: white;" stylesheets="@../css/background.css">
                  <Menu mnemonicParsing="false" onShowing="#setHomeButton" text="Home">
                      <MenuItem fx:id="backButton" mnemonicParsing="false" onAction="#goBack" text="Go back to previous page" />
                  </Menu>
@@ -68,17 +68,17 @@
                              </font>
                          </Text>
                          <ChoiceBox fx:id="initialLocationSelect" onAction="#initLocChanged" prefWidth="150.0" style="-fx-background-color: #ffffff;" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-                         <JFXButton onAction="#clearSelection" prefWidth="100.0" styleClass="jfx-button-login" stylesheets="@background.css" text="Cancel" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
+                         <JFXButton onAction="#clearSelection" prefWidth="100.0" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Cancel" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
                              <font>
                                  <Font name="System Bold" size="14.0" />
                              </font>
                          </JFXButton>
-                          <JFXToggleButton prefHeight="30.0" style="-fx-background-color: #ffffff;" stylesheets="@background.css" text="NO STAIRS" textAlignment="CENTER" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER">
+                          <JFXToggleButton prefHeight="30.0" style="-fx-background-color: #ffffff;" stylesheets="@../css/background.css" text="NO STAIRS" textAlignment="CENTER" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </JFXToggleButton>
-                  <JFXButton fx:id="directionsRequest" onAction="#directionSelection" prefHeight="88.0" prefWidth="177.0" styleClass="jfx-button-login" stylesheets="@background.css" text="Do you want directions?" textAlignment="CENTER" textFill="WHITE" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER">
+                  <JFXButton fx:id="directionsRequest" onAction="#directionSelection" prefHeight="88.0" prefWidth="177.0" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Do you want directions?" textAlignment="CENTER" textFill="WHITE" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
@@ -93,7 +93,7 @@
                            <AnchorPane fx:id="pane_002" maxWidth="3000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
                               <children>
                                           <ImageView fx:id="map_002" opacity="0.0" preserveRatio="true">
-                                              <Image url="@maps/00_thelowerlevel2.png" />
+                                              <Image url="@../maps/00_thelowerlevel2.png" />
                                           </ImageView>
                                           <Path fx:id="p_002" />
                               </children>
@@ -101,7 +101,7 @@
                            <AnchorPane fx:id="pane_001" maxWidth="3000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
                               <children>
                                           <ImageView fx:id="map_001" opacity="0.0" preserveRatio="true">
-                                              <Image url="@maps/00_thelowerlevel1.png" />
+                                              <Image url="@../maps/00_thelowerlevel1.png" />
                                           </ImageView>
                                           <Path fx:id="p_001" />
                               </children>
@@ -109,7 +109,7 @@
                            <AnchorPane fx:id="pane_00" maxWidth="3000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
                               <children>
                                           <ImageView fx:id="map_00" opacity="0.0" preserveRatio="true">
-                                              <Image url="@maps/00_thegroundfloor.png" />
+                                              <Image url="@../maps/00_thegroundfloor.png" />
                                           </ImageView>
                                           <Path fx:id="p_00" />
                               </children>
@@ -117,7 +117,7 @@
                            <AnchorPane fx:id="pane_01" maxWidth="3000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
                               <children>
                                           <ImageView fx:id="map_01" opacity="0.0" preserveRatio="true">
-                                              <Image url="@maps/01_thefirstfloor.png" />
+                                              <Image url="@../maps/01_thefirstfloor.png" />
                                           </ImageView>
                                           <Path fx:id="p_01" />
                               </children>
@@ -125,7 +125,7 @@
                            <AnchorPane fx:id="pane_02" maxWidth="3000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
                               <children>
                                           <ImageView fx:id="map_02" opacity="0.0" preserveRatio="true">
-                                              <Image url="@maps/02_thesecondfloor.png" />
+                                              <Image url="@../maps/02_thesecondfloor.png" />
                                           </ImageView>
                                           <Path fx:id="p_02" />
                               </children>
@@ -133,7 +133,7 @@
                            <AnchorPane fx:id="pane_03" maxWidth="3000.0" minWidth="684.0" prefHeight="465.0" prefWidth="684.0">
                               <children>
                                           <ImageView fx:id="map_03" opacity="0.0" preserveRatio="true">
-                                              <Image url="@maps/03_thethirdfloor.png" />
+                                              <Image url="@../maps/03_thethirdfloor.png" />
                                           </ImageView>
                                           <Path fx:id="p_03" />
                               </children>
@@ -143,37 +143,37 @@
                        </ScrollPane>
                   <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="20.0" StackPane.alignment="TOP_CENTER">
                      <children>
-                        <Label fx:id="floorLabel" styleClass="titleLabel" stylesheets="background.css" layoutY="14.0" text="Floor Label">
+                        <Label fx:id="floorLabel" styleClass="titleLabel" stylesheets="../css/background.css" layoutY="14.0" text="Floor Label">
                         </Label>
                      </children>
                   </AnchorPane>
                   <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="75.0" StackPane.alignment="TOP_LEFT">
                      <children>
-                        <JFXButton fx:id="zoom_button" contentDisplay="CENTER" layoutX="4.0" layoutY="14.0" mnemonicParsing="false" onAction="#zoom" prefWidth="100.0" styleClass="jfx-button-zoom" stylesheets="@background.css" text=" " textFill="WHITE">
+                        <JFXButton fx:id="zoom_button" contentDisplay="CENTER" layoutX="4.0" layoutY="14.0" mnemonicParsing="false" onAction="#zoom" prefWidth="100.0" styleClass="jfx-button-zoom" stylesheets="@../css/background.css" text=" " textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
                            <graphic>
                               <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@icon/zoom-in (1).png" />
+                                    <Image url="@../images/zoom-in (1).png" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXButton fx:id="unzoom_button" contentDisplay="CENTER" layoutX="4.0" layoutY="79.0" mnemonicParsing="false" onAction="#unZoom" prefWidth="100.0" styleClass="jfx-button-zoom" stylesheets="@background.css" text=" " textFill="WHITE">
+                        <JFXButton fx:id="unzoom_button" contentDisplay="CENTER" layoutX="4.0" layoutY="79.0" mnemonicParsing="false" onAction="#unZoom" prefWidth="100.0" styleClass="jfx-button-zoom" stylesheets="@../css/background.css" text=" " textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
                            <graphic>
                               <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@icon/zoom-out (1).png" />
+                                    <Image url="@../images/zoom-out (1).png" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXSlider fx:id="floorSlider" styleClass="floor-slider" stylesheets="background.css" layoutX="20.0" layoutY="150.0" max="6.0" prefHeight="150.0" prefWidth="10.0" showTickMarks="true" snapToTicks="true" AnchorPane.leftAnchor="20.0">
+                        <JFXSlider fx:id="floorSlider" styleClass="floor-slider" stylesheets="../css/background.css" layoutX="20.0" layoutY="150.0" max="6.0" prefHeight="150.0" prefWidth="10.0" showTickMarks="true" snapToTicks="true" AnchorPane.leftAnchor="20.0">
                            </JFXSlider>
                      </children>
                   </AnchorPane>
