--- a/Project/src/main/resources/admintools/admin_tools_switch_algorithm.fxml
+++ b/Project/src/main/resources/admintools/admin_tools_switch_algorithm.fxml
@@ -15,16 +15,16 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="admintools.UIControllerATCA">
    <children>
-      <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="/background.css">
+      <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="/css/background.css">
          <children>
             <ImageView fitHeight="600.0" fitWidth="900.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@Hospitalbackground.png" />
+                  <Image url="@../images/Hospitalbackground.png" />
                </image>
             </ImageView>
             <BorderPane>
                <top>
-                  <MenuBar blendMode="ADD" prefWidth="900.0" style="-fx-background-color: white;" stylesheets="@background.css" BorderPane.alignment="CENTER">
+                  <MenuBar blendMode="ADD" prefWidth="900.0" style="-fx-background-color: white;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
                     <menus>
                       <Menu mnemonicParsing="false" text="Back">
                         <items>
@@ -47,7 +47,7 @@
                               <Font name="System Bold" size="40.0" />
                            </font>
                         </Text>
-                        <JFXTabPane fx:id="tabs" layoutY="125.0" maxHeight="450.0" prefHeight="450.0" prefWidth="900.0" stylesheets="@background.css">
+                        <JFXTabPane fx:id="tabs" layoutY="125.0" maxHeight="450.0" prefHeight="450.0" prefWidth="900.0" stylesheets="@../css/background.css">
                            <tabs>
                               <Tab text="A* Algorithm">
                                 <content>
@@ -63,13 +63,13 @@
                                                 <Font size="18.0" />
                                              </font>
                                           </Text>
-                                          <JFXButton layoutX="356.0" layoutY="322.0" onAction="#changeAlgorithm" styleClass="jfx-button-login" stylesheets="@background.css" text="Set A* Algorithm" AnchorPane.leftAnchor="356.0" AnchorPane.topAnchor="322.0" />
+                                          <JFXButton layoutX="356.0" layoutY="322.0" onAction="#changeAlgorithm" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Set A* Algorithm" AnchorPane.leftAnchor="356.0" AnchorPane.topAnchor="322.0" />
                                        </children></AnchorPane>
                                 </content>
                               </Tab>
                               <Tab text="Depth First Algorithm">
                                 <content>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="413.0" prefWidth="900.0" style="-fx-background-color: #ffffff;" stylesheets="@background.css">
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="413.0" prefWidth="900.0" style="-fx-background-color: #ffffff;" stylesheets="@../css/background.css">
                                        <children>
                                           <Text fill="#015080" layoutX="106.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Depth First Algorithm" AnchorPane.leftAnchor="110.0" AnchorPane.topAnchor="40.0">
                                              <font>
@@ -81,7 +81,7 @@
                                                 <Font size="18.0" />
                                              </font>
                                           </Text>
-                                          <JFXButton layoutX="278.0" layoutY="324.0" onAction="#changeAlgorithm" styleClass="jfx-button-login" stylesheets="@background.css" text="Set Breadth For Search Algorithm" AnchorPane.leftAnchor="278.0" AnchorPane.topAnchor="324.0" />
+                                          <JFXButton layoutX="278.0" layoutY="324.0" onAction="#changeAlgorithm" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Set Breadth For Search Algorithm" AnchorPane.leftAnchor="278.0" AnchorPane.topAnchor="324.0" />
                                        </children></AnchorPane>
                                 </content>
                               </Tab>
@@ -99,7 +99,7 @@
                                                 <Font size="18.0" />
                                              </font>
                                           </Text>
-                                          <JFXButton layoutX="278.0" layoutY="319.0" onAction="#changeAlgorithm" styleClass="jfx-button-login" stylesheets="@background.css" text="Set Breadth For Search Algorithm" AnchorPane.topAnchor="322.0" />
+                                          <JFXButton layoutX="278.0" layoutY="319.0" onAction="#changeAlgorithm" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Set Breadth For Search Algorithm" AnchorPane.topAnchor="322.0" />
                                        </children></AnchorPane>
                                 </content>
                               </Tab>
