--- a/Project/src/main/resources/application/login_main.fxml
+++ b/Project/src/main/resources/application/login_main.fxml
@@ -15,11 +15,11 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #ffffff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.UIControllerLM">
    <children>
-      <AnchorPane prefHeight="600.0" prefWidth="900.0" styleClass="body-background" stylesheets="/background.css">
+      <AnchorPane prefHeight="600.0" prefWidth="900.0" styleClass="body-background" stylesheets="/css/background.css">
          <children>
             <ImageView fitWidth="900.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@MainMenu.png" />
+                  <Image url="@../images/MainMenu.png" />
                </image>
             </ImageView>
             <BorderPane prefHeight="35.0" prefWidth="900.0">
@@ -27,7 +27,7 @@
                   <Blend />
                </effect>
                <top>
-                  <JFXTabPane fx:id="tabs" prefHeight="600.0" prefWidth="900.0" stylesheets="@background.css" BorderPane.alignment="CENTER">
+                  <JFXTabPane fx:id="tabs" prefHeight="600.0" prefWidth="900.0" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
                      <tabs>
                         <Tab text="Guest">
                           <content>
@@ -38,14 +38,14 @@
                                           <Font name="System Bold Italic" size="36.0" />
                                        </font>
                                     </Text>
-                                    <JFXButton fx:id="loginAsGuestButton" layoutX="349.0" layoutY="334.0" onAction="#setLoginAsGuestButton" styleClass="jfx-button-login" stylesheets="@background.css" text="Continue As A Guest" textFill="WHITE">
+                                    <JFXButton fx:id="loginAsGuestButton" layoutX="349.0" layoutY="334.0" onAction="#setLoginAsGuestButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Continue As A Guest" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold Italic" size="14.0" />
                                        </font>
                                     </JFXButton>
                                     <ImageView fitHeight="150.0" fitWidth="300.0" layoutX="300.0" layoutY="38.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@BWH.JPG" />
+                                          <Image url="@../images/BWH.JPG" />
                                        </image>
                                     </ImageView>
                                  </children></AnchorPane>
@@ -72,10 +72,10 @@
                                           <Font name="System Bold Italic" size="48.0" />
                                        </font>
                                     </Text>
-                                    <JFXButton fx:id="loginAsUserButton" layoutX="417.0" layoutY="400.0" onAction="#setLoginAsUserButton" styleClass="jfx-button-login" stylesheets="@background.css" text="Login" textAlignment="CENTER" textFill="WHITE" />
+                                    <JFXButton fx:id="loginAsUserButton" layoutX="417.0" layoutY="400.0" onAction="#setLoginAsUserButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE" />
                                     <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="15.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@BWH.JPG" />
+                                          <Image url="@../images/BWH.JPG" />
                                        </image>
                                     </ImageView>
                                  </children>
@@ -88,7 +88,7 @@
                                  <children>
                                     <JFXTextField fx:id="adminUsernameTextField" layoutX="350.0" layoutY="238.0" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Username" style="-fx-background-color: #ffffff;" />
                                     <JFXPasswordField fx:id="adminPasswordTextField" layoutX="350.0" layoutY="335.0" opacity="0.8" prefHeight="35.0" prefWidth="200.0" promptText="Password" style="-fx-background-color: #ffffff;" />
-                                    <JFXButton fx:id="loginAsAdminButton" layoutX="417.0" layoutY="400.0" onAction="#setLoginAsAdminButton" styleClass="jfx-button-login" stylesheets="@background.css" text="Login" textAlignment="CENTER" textFill="WHITE">
+                                    <JFXButton fx:id="loginAsAdminButton" layoutX="417.0" layoutY="400.0" onAction="#setLoginAsAdminButton" styleClass="jfx-button-login" stylesheets="@../css/background.css" text="Login" textAlignment="CENTER" textFill="WHITE">
                                        <font>
                                           <Font name="System Bold" size="15.0" />
                                        </font>
@@ -110,7 +110,7 @@
                                     </Text>
                                     <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="15.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
-                                          <Image url="@BWH.JPG" />
+                                          <Image url="@../images/BWH.JPG" />
                                        </image>
                                     </ImageView>
                                  </children>
