--- a/Project/src/main/resources/servicerequests/service_request_interpreter.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_interpreter.fxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXTextArea?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
@@ -15,18 +16,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRET">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRIN">
     <children>
-          <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="/background.css">
+          <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="/css/background.css">
               <children>
                   <ImageView fitWidth="900.0" pickOnBounds="true" preserveRatio="true">
                       <image>
-                          <Image url="@Hospitalbackground.png" />
+                          <Image url="@../images/Hospitalbackground.png" />
                       </image>
                   </ImageView>
                   <BorderPane prefHeight="600.0" prefWidth="900.0">
                       <top>
-                          <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@background.css" BorderPane.alignment="CENTER">
+                          <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
                               <menus>
                                   <Menu mnemonicParsing="false" onShowing="#setHomeButton" text="Home">
                            <items>
@@ -53,44 +54,32 @@
                <left>
                   <AnchorPane prefHeight="575.0" prefWidth="250.0" BorderPane.alignment="CENTER">
                      <children>
-                        <JFXButton layoutX="86.0" layoutY="472.0" onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@background.css" text="Confirm" />
-                        <JFXButton contentDisplay="CENTER" layoutX="102.0" layoutY="516.0" onAction="#setCancelButton" styleClass="jfx-button-cancel" stylesheets="@background.css" text=" ">
+                        <JFXButton layoutX="86.0" layoutY="472.0" onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Confirm" />
+                        <JFXButton contentDisplay="CENTER" layoutX="102.0" layoutY="516.0" onAction="#setCancelButton" styleClass="jfx-button-cancel" stylesheets="@../css/background.css" text=" ">
                            <graphic>
                               <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@icon/cancel%20(1).png" />
+                                    <Image url="@../images/cancel (1).png" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <Text fill="WHITE" layoutX="31.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="External Transportation">
+                        <Text fill="WHITE" layoutX="31.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Interpreter">
                            <font>
-                              <Font name="System Bold Italic" size="19.0" />
+                              <Font name="System Bold Italic" size="24.0" />
                            </font>
                         </Text>
-                        <Text fill="WHITE" layoutX="31.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ryan O'Brien">
+                        <Text fill="WHITE" layoutX="31.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Henry Poskanzer">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Text>
                         <ChoiceBox fx:id="roomSelect" layoutX="48.0" layoutY="109.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
-                        <Text fill="WHITE" layoutX="48.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Pickup Location">
-                           <font>
-                                <Font name="System Bold" size="14.0" />
-                           </font>
-                        </Text>
-                        <Text fill="WHITE" layoutX="48.0" layoutY="216.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message Box">
-                           <font>
-                              <Font name="System Bold" size="14.0" />
-                           </font>
-                        </Text>
-                        <ChoiceBox fx:id="transportSelect" layoutX="47.0" layoutY="164.0" prefWidth="150.0" />
-                        <Text fill="WHITE" layoutX="47.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Transport Type">
-                           <font>
-                              <Font name="System Bold" size="14.0" />
-                           </font>
-                        </Text>
-                        <JFXTextArea fx:id="serviceMessage" focusColor="WHITE" layoutX="47.0" layoutY="220.0" prefHeight="218.0" prefWidth="152.0" style="-fx-background-color: #ffffff;" unFocusColor="WHITE" />
+                        <ChoiceBox fx:id="languageSelect" layoutX="48.0" layoutY="165.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
+                        <JFXTextField fx:id="serviceMessage" layoutX="48.0" layoutY="220.0" prefHeight="220.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
+                        <Label layoutX="67.0" layoutY="92.0" style="-fx-text-fill: #ffffff;" styleClass="label2" stylesheets="@../css/background.css" text="Select your location." textFill="WHITE" />
+                        <Label layoutX="73.0" layoutY="148.0" style="-fx-text-fill: #ffffff;" styleClass="label2" stylesheets="@../css/background.css" text="Select a language." textFill="WHITE" />
+                        <Label layoutX="63.0" layoutY="203.0" style="-fx-text-fill: #ffffff;" styleClass="label2" stylesheets="@../css/background.css" text="Additional Comments" textFill="WHITE" />
                      </children>
                   </AnchorPane>
                </left>
