--- a/Project/src/main/resources/servicerequests/service_request_religious_services.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_religious_services.fxml
@@ -26,16 +26,16 @@
 
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRRS">
     <children>
-        <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="/background.css">
+        <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="/css/background.css">
             <children>
                 <ImageView fitWidth="900.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@Hospitalbackground.png" />
+                        <Image url="@../images/Hospitalbackground.png" />
                     </image>
                 </ImageView>
                 <BorderPane prefHeight="600.0" prefWidth="900.0">
                     <top>
-                        <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@background.css" BorderPane.alignment="CENTER">
+                        <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
                             <menus>
                                 <Menu mnemonicParsing="false" onShowing="#setHomeButton" text="Home">
                                     <items>
@@ -55,8 +55,8 @@
                     <left>
                         <AnchorPane prefHeight="575.0" prefWidth="250.0" BorderPane.alignment="CENTER">
                             <children>
-                                <JFXButton fx:id="clearButton" layoutX="25.0" layoutY="465.0" onAction="#setClearButton" prefWidth="78.0" styleClass="jfx-button_edit" stylesheets="@background.css" text="Clear" />
-                                <JFXButton contentDisplay="CENTER" layoutX="105.0" layoutY="514.0" onAction="#setCancelButton" styleClass="jfx-button-cancel" stylesheets="@background.css" text=" ">
+                                <JFXButton fx:id="clearButton" layoutX="25.0" layoutY="465.0" onAction="#setClearButton" prefWidth="78.0" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Clear" />
+                                <JFXButton contentDisplay="CENTER" layoutX="105.0" layoutY="514.0" onAction="#setCancelButton" styleClass="jfx-button-cancel" stylesheets="@../css/background.css" text=" ">
                                     <graphic>
                                         <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                             <image>
@@ -91,7 +91,7 @@
                                         <Font name="System Bold" size="18.0" />
                                     </font>
                                 </Text>
-                                <JFXButton fx:id="confirmButton" layoutX="146.0" layoutY="465.0" onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@background.css" text="Confirm" />
+                                <JFXButton fx:id="confirmButton" layoutX="146.0" layoutY="465.0" onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Confirm" />
                             </children>
                         </AnchorPane>
                     </left>
