--- a/Project/src/main/resources/servicerequests/service_request_transport.fxml
+++ b/Project/src/main/resources/servicerequests/service_request_transport.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXTextArea?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -15,20 +15,20 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRSA">
+<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRET">
     <children>
-          <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="/background.css">
+          <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="body-background" stylesheets="/css/background.css">
               <children>
                   <ImageView fitWidth="900.0" pickOnBounds="true" preserveRatio="true">
                       <image>
-                          <Image url="@Hospitalbackground.png" />
+                          <Image url="@../images/Hospitalbackground.png" />
                       </image>
                   </ImageView>
                   <BorderPane prefHeight="600.0" prefWidth="900.0">
                       <top>
-                          <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@background.css" BorderPane.alignment="CENTER">
+                          <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@../css/background.css" BorderPane.alignment="CENTER">
                               <menus>
-                                  <Menu fx:id="homeButton" mnemonicParsing="false" onAction="#setHomeButton" onShowing="#setHomeButton" text="Home">
+                                  <Menu mnemonicParsing="false" onShowing="#setHomeButton" text="Home">
                            <items>
                               <MenuItem mnemonicParsing="false" text="HOME" />
                            </items>
@@ -53,39 +53,44 @@
                <left>
                   <AnchorPane prefHeight="575.0" prefWidth="250.0" BorderPane.alignment="CENTER">
                      <children>
-                        <JFXButton fx:id="confirmButton" layoutX="86.0" layoutY="472.0" onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@background.css" text="Confirm" />
-                        <JFXButton fx:id="cancelButton" contentDisplay="CENTER" layoutX="102.0" layoutY="516.0" onAction="#setCancelButton" styleClass="jfx-button-cancel" stylesheets="@background.css" text=" ">
+                        <JFXButton layoutX="86.0" layoutY="472.0" onAction="#setConfirmButton" styleClass="jfx-button_edit" stylesheets="@../css/background.css" text="Confirm" />
+                        <JFXButton contentDisplay="CENTER" layoutX="102.0" layoutY="516.0" onAction="#setCancelButton" styleClass="jfx-button-cancel" stylesheets="@../css/background.css" text=" ">
                            <graphic>
                               <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@icon/cancel (1).png" />
+                                    <Image url="@icon/cancel%20(1).png" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <Text fill="WHITE" layoutX="31.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sanitation">
+                        <Text fill="WHITE" layoutX="31.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="External Transportation">
                            <font>
-                              <Font name="System Bold Italic" size="24.0" />
+                              <Font name="System Bold Italic" size="19.0" />
                            </font>
                         </Text>
-                        <Text fill="WHITE" layoutX="31.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Joseph Niski">
-                           <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font>
-                        </Text>
-                        <ChoiceBox fx:id="roomSelect" layoutX="48.0" layoutY="109.0" onMouseClicked="#setRoomSelect" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
-                        <ChoiceBox fx:id="sanitationSelect" layoutX="48.0" layoutY="174.0" onMouseClicked="#setSanitationSelect" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
-                        <JFXTextField fx:id="serviceMessage" alignment="CENTER" layoutX="48.0" layoutY="220.0" prefHeight="220.0" prefWidth="150.0" promptText="What is wrong?" style="-fx-background-color: #ffffff;" />
-                        <Text fill="WHITE" layoutX="49.0" layoutY="94.0" strokeType="OUTSIDE" strokeWidth="0.0" text="What room needs service?">
+                        <Text fill="WHITE" layoutX="31.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ryan O'Brien">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Text>
-                        <Text fill="WHITE" layoutX="48.0" layoutY="163.0" strokeType="OUTSIDE" strokeWidth="0.0" text="What was spilled?" wrappingWidth="104.15625">
+                        <ChoiceBox fx:id="roomSelect" layoutX="48.0" layoutY="109.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
+                        <Text fill="WHITE" layoutX="48.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Pickup Location">
                            <font>
-                              <Font name="System Bold" size="12.0" />
+                                <Font name="System Bold" size="14.0" />
                            </font>
                         </Text>
+                        <Text fill="WHITE" layoutX="48.0" layoutY="216.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Message Box">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Text>
+                        <ChoiceBox fx:id="transportSelect" layoutX="47.0" layoutY="164.0" prefWidth="150.0" />
+                        <Text fill="WHITE" layoutX="47.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Transport Type">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Text>
+                        <JFXTextArea fx:id="serviceMessage" focusColor="WHITE" layoutX="47.0" layoutY="220.0" prefHeight="218.0" prefWidth="152.0" style="-fx-background-color: #ffffff;" unFocusColor="WHITE" />
                      </children>
                   </AnchorPane>
                </left>
